# SeedPass

./: .gitignore  Cargo.toml  README.en.md  README.md  RELEASE.en.md  RELEASE.md  SPEC.en.md  SPEC.md
examples/: derive.rs  mnemonic.rs
extensions/chrome-edge/: BUILD.en.md  BUILD.md  README.en.md  README.md  background.js  content.js  manifest.json  popup.css  popup.html  popup.js
extensions/chrome-edge/pkg/: passworder_core.d.ts  passworder_core.js  passworder_core_bg.wasm  passworder_core_bg.wasm.d.ts
scripts/: package-extension.ps1
src/: lib.rs
